syntax = "proto3";

package greet;

option go_package = "github.com/masakizk/go/grpc/greeter";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

// Request Message
message GreetRequest {
  Greeting greeting = 1;
}

// Response Message
message GreetResponse {
  string result = 1;
}

service GreetService{
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {};

  // Client Streaming
  rpc LongGreet(stream GreetRequest) returns (GreetResponse) {};

  // Bi-Directional Streaming
  rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse) {};

  rpc GreetWithDeadline(GreetRequest) returns (GreetResponse) {};
}
